Remove a few minor bugs